src/app/components/routes/detalle-socio/detalle-socio.component.css
.btn {
  width: 20vw;
  margin: auto 1rem;
}

.profile-img {
  border-radius: 50%;
  object-fit: cover;
}

h2 {
  font-size: 24px;
}

h3 {
  font-size: 20px;
}

p {
  font-size: 16px;
  color: #979797;
}

.img-actividad {
  height: 8vh;
  display: block;
  margin: auto;
}

.estado {
  margin-top: 20px;
}

.actividad-container {
  width: 20vw;
  height: 35%;
}

a:hover {
  background-color: #ddd9d5;
}

.actividad-link,
.actividad-link:hover,
.actividad-link:visited {
  text-decoration: none;
  font: inherit;
  color: inherit;
}

.form-error {
  color: red;
  font-size: 0.8rem;
  display: inline;
}

.form-success {
  color: green;
  font-size: 0.8rem;
  display: inline;
}

.carousel {
  height: 10vh;
  width: 80vw;
}

.carousel-cell {
  background-color: aqua;
  height: 10%;
}

.carousel-section {
  width: 20vw;
}

